--- a/package.json
+++ b/package.json
@@ -2,6 +2,7 @@
   "name": "soundmanager",
   "version": "1.0.0",
   "description": "",
+  "main": "src/index.js",
   "dependencies": {
     "@babel/preset-env": "^7.9.5",
     "howler": "^2.1.3"
