--- a/package.json
+++ b/package.json
@@ -2,7 +2,8 @@
   "name": "soundmanager",
   "version": "1.0.0",
   "description": "",
-  "main": "src/index.js",
+  "main": "dist/soundmanager.js",
+  "module": "src/index.js",
   "dependencies": {
     "@babel/preset-env": "^7.9.5",
     "howler": "^2.1.3"
@@ -13,13 +14,15 @@
     "babel-preset-env": "^1.7.0",
     "eslint": "^6.8.0",
     "eslint-loader": "^4.0.0",
+    "rimraf": "^3.0.2",
     "webpack": "^4.42.1",
     "webpack-cli": "^3.3.11"
   },
   "scripts": {
     "dev": "webpack --watch",
     "build": "webpack --mode production",
-    "test": "echo \"Error: no test specified\" && exit 1"
+    "test": "echo \"Error: no test specified\" && exit 1",
+    "clean": "rimraf dist"
   },
   "repository": {
     "type": "git",
