--- a/package.json
+++ b/package.json
@@ -1,15 +1,15 @@
 {
   "name": "soundmanager",
-  "version": "1.0.1",
+  "version": "1.1.0",
   "description": "",
   "main": "dist/soundmanager.js",
   "module": "src/index.js",
   "dependencies": {
-    "@babel/preset-env": "^7.9.5",
     "howler": "^2.1.3"
   },
   "devDependencies": {
-    "@babel/core": "^7.9.0",
+    "@babel/core": "^7.10.5",
+    "@babel/preset-env": "^7.10.4",
     "babel-loader": "^8.1.0",
     "babel-preset-env": "^1.7.0",
     "eslint": "^6.8.0",
@@ -33,5 +33,10 @@
   "bugs": {
     "url": "https://github.com/musikele/soundmanager/issues"
   },
-  "homepage": "https://github.com/musikele/soundmanager#readme"
+  "homepage": "https://github.com/musikele/soundmanager#readme",
+  "babel": {
+    "presets": [
+      "@babel/preset-env"
+    ]
+  }
 }
